[tool.poetry]
name = "login-boilerplate"
version = "0.1.0"
description = "boilerplate study"
authors = ["Bruno Estrela"]
readme = "README.md"
packages = [{include = "login_boilerplate"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
typer = "^0.9.0"
ruff = "^0.0.275"
black = "^23.3.0"
mypy = "^1.4.1"
psycopg2 = "^2.9.6"
pydantic = {version = "^1.10.9", extras = ["dotenv"]}
uvicorn = "^0.22.0"
redis = "^4.6.0"
httpx = "^0.24.1"
sqlalchemy = "^2.0.17"
fastapi = "^0.98.0"


[tool.poetry.group.prod.dependencies]
psycopg2 = "^2.9.6"
pydantic = "^1.10.9"
uvicorn = "^0.22.0"
redis = "^4.6.0"
httpx = "^0.24.1"
sqlalchemy = "^2.0.17"
fastapi = "^0.98.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
